--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "class-variance-authority": "^0.7.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
