--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^4.1.0",
